--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -36,6 +36,14 @@
   --border-btn: 1px;
   --tab-border: 1px;
   --tab-radius: 0.5rem;
+
+  &::-webkit-scrollbar {
+    @apply w-3;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    @apply bg-base-300 rounded-sm;
+  }
 }
 
 html {
@@ -65,7 +73,7 @@ body {
   @apply bg-base-100 text-base-content;
 
   &::-webkit-scrollbar {
-    @apply w-3 sm:hidden;
+    @apply w-3;
   }
 
   &::-webkit-scrollbar-thumb {
